# potato-chess-uci

./: CMakeLists.txt  README.md  bitboard.cpp  bitboard.h  book.cpp  book.h  eval.cpp  hash.cpp  hash.h  hashdefs.h  logger.cpp  logger.h  main.cpp  maps.cpp  maps.h  move.cpp  move.h  movegen.cpp  movegen.h  perft.cpp  perft.h  ponder.h  search.cpp  search.h  searchold.cpp  timeman.cpp  timeman.h
